@@ -1,5 +1,10 @@
 [b]Version 0.6.9[/b]:
 
+(2010-02-02)
+ * Added a new action to toggle deinterlacing (assigned to key D). It just 
+   runs the mplayer slave command "step_property deinterlace". It toggles 
+   deinterlacing on/off. Requires the yadif or kerndeint filters.
+
 (2010-02-01)
  * Added an option (Options -> Statusbar) to display the video resolution and
    fps in the statusbar.
